# phinet

./: Cargo.toml  README.md
phinet-browser/: index.html  package.json
phinet-browser/src/: App.tsx
phinet-browser/src-tauri/: Cargo.toml  tauri.conf.json
phinet-browser/src-tauri/binaries/: .gitkeep
phinet-browser/src-tauri/src/: main.rs  proxy.rs  vault.rs
phinet-browser/src/components/: AddressBar.tsx  CircuitVisualizer.tsx  SiteManager.tsx  StatusBar.tsx  TabBar.tsx  WebView.tsx
phinet-browser/src/features/: Browser.tsx  Com.tsx  Vault.tsx
phinet-browser/src/styles/: App.css  globals.css
phinet-bwscanner/src/: lib.rs  main.rs
phinet-cli/src/: main.rs
phinet-core/: Cargo.toml
phinet-core/src/: board.rs  circuit.rs  circuit_mgr.rs  client_auth.rs  consensus_fetch.rs  crypto.rs  dht.rs  directory.rs  guards.rs  hidden_service.rs  hs_identity.rs  lib.rs  node.rs  onion.rs  path_select.rs  session.rs  store.rs  transport.rs  wire.rs
phinet-daemon/: Cargo.toml
phinet-daemon/src/: main.rs
